Bug 359872 - Big icon when trying to drag a attached pdf file
Summary: Big icon when trying to drag a attached pdf file
Status: RESOLVED FIXED
Alias: None
Product: kmail2
Classification: Applications
Component: general (other bugs)
Version First Reported In: 5.1
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2016-02-27 23:56 UTC by André Marcelo Alvarenga
Modified: 2016-02-29 05:59 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.1.3
Sentry Crash Report:


Attachments
Screenshot (54.01 KB, image/png)
2016-02-27 23:57 UTC, André Marcelo Alvarenga
Details

Note You need to log in before you can comment on or make changes to this bug.
Description André Marcelo Alvarenga 2016-02-27 23:56:23 UTC
Open a message with a attached pdf file
Click on pdf file and try to drag, e.g, to Dolphin view.

See screenshot.

Reproducible: Always




KMail 5.1.2
Comment 1 André Marcelo Alvarenga 2016-02-27 23:57:05 UTC
Created attachment 97585 [details]
Screenshot
Comment 2 Laurent Montel 2016-02-28 07:10:09 UTC
I link svg icons :)
Ok I will try to fix it
Comment 3 Laurent Montel 2016-02-28 07:21:55 UTC
Git commit e98c642987e8d9b45e6b08d325a1ef202e116ff3 by Montel Laurent.
Committed on 28/02/2016 at 07:21.
Pushed by mlaurent into branch 'Applications/15.12'.

Fix Bug 359872 - Big icon when trying to drag a attached pdf file

FIXED-IN: 5.1.3

M  +1    -1    messageviewer/src/viewer/urlhandlermanager.cpp

http://commits.kde.org/kdepim/e98c642987e8d9b45e6b08d325a1ef202e116ff3
Comment 4 Laurent Montel 2016-02-28 07:22:27 UTC
Git commit 8ae464ee9b960c3d7d9cdb02fc6fa70ee95fdf15 by Montel Laurent.
Committed on 28/02/2016 at 07:21.
Pushed by mlaurent into branch 'master'.

Fix Bug 359872 - Big icon when trying to drag a attached pdf file

(backport to master)

M  +1    -1    messageviewer/src/viewer/urlhandlermanager.cpp

http://commits.kde.org/messagelib/8ae464ee9b960c3d7d9cdb02fc6fa70ee95fdf15
Comment 5 Laurent Montel 2016-02-28 16:53:32 UTC
Which icon theme do you use ?
Comment 6 André Marcelo Alvarenga 2016-02-28 19:48:44 UTC
(In reply to Laurent Montel from comment #5)
> Which icon theme do you use ?

I am using Maia icon theme.  https://github.com/manjaro/artwork-maia/.
This theme is used in Manjaro Linux.
Comment 7 Laurent Montel 2016-02-29 05:59:26 UTC
Ok thanks
I will test it here too.