Fix Bug 359872 - Big icon when trying to drag a attached pdf file

FIXED-IN: 5.1.3
BUG: 359872